# ML_Zoomcamp

./: .gitattributes  .gitignore  README.md
.ipynb_checkpoints/: Module_1_HW-checkpoint.ipynb
Midterm project/: credit_card_fraud.ipynb  predict-test.ipynb  predict.py  train.py  untitled.py
Midterm project/.ipynb_checkpoints/: credit_card_fraud-checkpoint.ipynb
Midterm project/credit_fraud/: Dockerfile  main.py  pyproject.toml
Midterm project/credit_fraud/src/: predict-test.py  predict.py
Midterm project/mlruns/0/: meta.yaml
Midterm project/mlruns/0/0134576c6b534b64bf03c11ea3eb967d/: meta.yaml
Midterm project/mlruns/0/01615ae905224984af957bab37a06f2b/: meta.yaml
Midterm project/mlruns/0/09e3615e6c914cd6af64236a2dc2bb97/: meta.yaml
Midterm project/mlruns/0/0b104e09f64b4ba5af3720ee9e0cc570/: meta.yaml
Midterm project/mlruns/0/11c3a261dbef4dc3be0624ce8a3673bb/: meta.yaml
Midterm project/mlruns/0/16a3fd9db33441da985aef0e74769af8/: meta.yaml
Midterm project/mlruns/0/195dcb5414ff4e22aec17e66fad095ac/: meta.yaml
Midterm project/mlruns/0/1acff992d6bc46c4b929bb24144b5077/: meta.yaml
Module 2 - regression/: Regression.ipynb  Regression_sklearn.ipynb
Module 3 - classification/: Classification.ipynb
Module 4 - evaluation/: Evaluation.ipynb
Module 5 - deployment/: Dockerfile  Pipfile  deployment.ipynb  docker-run-command.txt  predict-test.ipynb  predict-test.py  train.py
Module 5 - deployment/.ipynb_checkpoints/: predict-checkpoint.py
Module 6 - trees/: Trees.ipynb
Module 6 - trees/.ipynb_checkpoints/: Trees-checkpoint.ipynb
(+318 files in other folders)
